pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__integration_tests__artifact_names_generate_all.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"artifact_names\", events)"
---
TestResult {
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "artifact.one",
                status: "Pending",
            },
        ],
        error: None,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "artifact.one",
                status: "NeedsGeneration",
            },
        ],
        error: None,
    },
}
