pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__integration_tests__missing_files_shows_error.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"missing-files\", events)"
---
TestResult {
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "missing-files",
                name: "test-artifact",
                status: "Pending",
            },
        ],
        error: None,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "missing-files",
                name: "test-artifact",
                status: "Failed(\"generator missing required files for artifact 'test-artifact': [very-simple-secrets]\")",
            },
        ],
        error: None,
    },
}
