pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__integration_tests__no_config_generate_one.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"no_config\", events)"
---
TestResult {
    events: [
        "select",
        "fill_prompts([\"one\", \"two\"])",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "test-artifact",
                status: "Pending",
            },
        ],
        error: None,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "test-artifact",
                status: "UpToDate",
            },
        ],
        error: None,
    },
}
