pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__integration_tests__scenario_simple_cancel_prompt.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenario_simple\", events)"
---
TestResult {
    events: [
        "select",
        "type_and_cancel(\"partial-input\")",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "test-artifact",
                status: "Pending",
            },
        ],
        error: None,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "test-artifact",
                status: "Pending",
            },
        ],
        error: None,
    },
}
