pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__integration_tests__two_artifacts_select_first.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"2_artifacts\", events)"
---
TestResult {
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "artifact-one",
                status: "Pending",
            },
            ArtifactState {
                target: "machine-name",
                name: "artifact-two",
                status: "Pending",
            },
        ],
        error: None,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "artifact-one",
                status: "UpToDate",
            },
            ArtifactState {
                target: "machine-name",
                name: "artifact-two",
                status: "Pending",
            },
        ],
        error: None,
    },
}
